--- a/Video.html
+++ b/Video.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="icon" href="images/icon.png" type="image/icon type">
-		<title>CopeWithCovid</title>
+		<title>CovidMadeEasy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Cope</strong> <span>With Covid</span></a>
+						<a href="index.html" class="logo"><strong>Covid</strong> <span>Made Easy</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -36,9 +36,7 @@
 							<li><a href="Video.html">VIdeo Games</a></li>
 
 						</ul>
-						<ul class="actions stacked">
-							<li><a href="https://discord.gg/VtnABeF7HS" class="button primary fit">Discord</a></li>
-						</ul>
+					
 					</nav>
 
 				<!-- Banner -->
@@ -46,7 +44,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/Lofi5.gif" alt="" />
+								<img src="" alt="" />
 							</span>
 							<header class="major">
 								<h1>Video Game Recommendations</h1>
@@ -71,13 +69,13 @@
 							</section>
                                 -->
 						<!-- Two -->
-							<section id="two" class="spotlights">
+							<section id="two" class="">
 								<section>
 									<a href="#" class="image">
-										<img src="images/Tomb.jpg" alt="" data-position="center center" />
+										<img src="images/Tomb.jpg" alt="" data-position="center center" width="600" height="400"/>
 									</a>
 									<div class="content">
-										<div class="inner">
+										<div class="right-stuff">
 											<header class="major">
 												<h3>RPGs</h3>
 											</header>
@@ -94,10 +92,10 @@
 								</section>
 								<section>
 									<a href="#" class="image">
-										<img src="images/CallofDuty.jpg" alt="" data-position="top center" />
+										<img src="images/CallofDuty.jpg" alt="" data-position="top center" width="600" height="400"/>
 									</a>
 									<div class="content">
-										<div class="inner">
+										<div class="right-stuff">
 											<header class="major">
 												<h3>FPS</h3>
 											</header>
@@ -114,10 +112,10 @@
 								</section>
 								<section>
 									<a href="#" class="image">
-										<img src="images/Battle.jpg" alt="" data-position="25% 25%" />
+										<img src="images/Battle.jpg" alt="" data-position="top center" width="600" height="400"/>
 									</a>
 									<div class="content">
-										<div class="inner">
+										<div class="right-stuff">
 											<header class="major">
 												<h3>Battle Royal</h3>
 											</header>
